# embodiment_subtask_pipeline

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
configs/datasets/: agibot.yaml  austin_buds.yaml  bridge_v2.yaml  calvin.yaml  droid.yaml  libero.yaml  robotwin.yaml
doc/: L2_subtask_annotation_guide.md  pipeline_improvement_plan.md  pipeline_overview.md  prompt_1a_anchor_extraction.md  prompt_1c_text_decomposition.md  prompt_2_fallback.md  prompt_2_negotiate.md  prompt_3_description_gen.md  prompt_3_self_check.md
subtask_pipeline/: __init__.py  cli.py  config.py  pipeline.py  stats.py
subtask_pipeline/data/: __init__.py  base.py  lerobot_loader.py  synthetic.py  types.py
subtask_pipeline/llm/: __init__.py  base.py  mock.py  openai_compat.py  prompts.py  vllm_client.py
subtask_pipeline/stages/: __init__.py  stage05_global.py  stage0_prefilter.py  stage1a_anchors.py  stage1b_physical.py  stage1c_text.py  stage2_align.py  stage3_describe.py  stage4_grounding.py  stage5_output.py
tests/: test_pipeline.py  test_vllm.py
